--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- FONTS -->
     <link
-    href="https://fonts.googleapis.com/css?family=Mouse+Memoirs|Open+Sans&display=swap"
+    href="https://fonts.googleapis.com/css?family=Mouse+Memoirs|Lato&display=swap"
     rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
